update nokogiri per github vuln CVE-2020-7595.

--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ footer-links:
   github: tomohulk
   instagram: tomohulk
   reddit: tomohulk
-  linkedin:
+  linkedin: tomohulk
   twitter: tomohulk
   stackoverflow: users/691551/tomohulk
   youtube: UCdezPgvhJ605nxJYSrNXRGg
